// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include dynamic folders on the one hand and fixed ones at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 1049.9090833947007,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 1049.9090833947007,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 290.7031779482708,
      "y": 4,
      "z": -84.63931936533464,
    },
    "isLeaf": false,
    "length": 577.4499958670854,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "src",
    "outgoingEdgePoint": Vector3 {
      "x": 290.7031779482708,
      "y": 4,
      "z": 204.08567856820804,
    },
    "path": "/root/src",
    "visible": true,
    "width": 367.4681791881452,
    "x0": 356.9690883541982,
    "y0": 20.998181667894013,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 211.49075492328552,
      "y": 6,
      "z": -82.25852852780167,
    },
    "isLeaf": false,
    "length": 567.9268325169536,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "main",
    "outgoingEdgePoint": Vector3 {
      "x": 211.49075492328552,
      "y": 6,
      "z": 201.7048877306751,
    },
    "path": "/root/src/main",
    "visible": true,
    "width": 202.98313827899983,
    "x0": 359.9991857837856,
    "y0": 25.759763342959932,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 381.45167438286995,
      "y": 6,
      "z": -82.25852852780167,
    },
    "isLeaf": false,
    "length": 567.9268325169536,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "test",
    "outgoingEdgePoint": Vector3 {
      "x": 381.45167438286995,
      "y": 6,
      "z": 201.7048877306751,
    },
    "path": "/root/src/test",
    "visible": true,
    "width": 130.87850578099426,
    "x0": 566.0124214923728,
    "y0": 25.759763342959932,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 201.29860902376421,
      "y": 506,
      "z": -150.2733940455047,
    },
    "isLeaf": true,
    "length": 276.82104374587794,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file1.java",
    "outgoingEdgePoint": Vector3 {
      "x": 201.29860902376421,
      "y": 506,
      "z": -11.862872172565687,
    },
    "path": "/root/src/main/file1.java",
    "visible": true,
    "width": 176.53865162078233,
    "x0": 363.02928321337305,
    "y0": 30.521345018025855,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 201.29860902376421,
      "y": 506,
      "z": 131.30923137543914,
    },
    "isLeaf": true,
    "length": 276.8210437458779,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file2.java",
    "outgoingEdgePoint": Vector3 {
      "x": 201.29860902376421,
      "y": 506,
      "z": 269.7197532483781,
    },
    "path": "/root/src/main/file2.java",
    "visible": true,
    "width": 176.53865162078233,
    "x0": 363.02928321337305,
    "y0": 312.10397043896967,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 65,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 371.2595284833487,
      "y": 506,
      "z": -79.87773769026873,
    },
    "isLeaf": true,
    "length": 558.4036691668217,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "otherFile.java",
    "outgoingEdgePoint": Vector3 {
      "x": 371.2595284833487,
      "y": 506,
      "z": 199.32409689314215,
    },
    "path": "/root/src/test/otherFile.java",
    "visible": true,
    "width": 104.43401912277693,
    "x0": 569.0425189219602,
    "y0": 30.521345018025855,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 91.2204521032777,
      "y": 4,
      "z": 537.4318125460254,
    },
    "isLeaf": false,
    "length": 314.9727250184102,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "resources",
    "outgoingEdgePoint": Vector3 {
      "x": 353.69772295195287,
      "y": 4,
      "z": 537.4318125460254,
    },
    "path": "/root/resources",
    "visible": true,
    "width": 524.9545416973502,
    "x0": 209.98181667894013,
    "y0": 629.9454500368204,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -3.271365402245351,
      "y": 6,
      "z": 417.7421770390296,
    },
    "isLeaf": false,
    "length": 62.99454500368199,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "textFiles",
    "outgoingEdgePoint": Vector3 {
      "x": 49.22408876748966,
      "y": 6,
      "z": 417.7421770390296,
    },
    "path": "/root/resources/textFiles",
    "visible": true,
    "width": 104.99090833947002,
    "x0": 220.48090751288714,
    "y0": 636.2449045371886,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -4.001918442380834,
      "y": 506,
      "z": 417.74217703902957,
    },
    "isLeaf": true,
    "length": 59.98884106712467,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "file.txt",
    "outgoingEdgePoint": Vector3 {
      "x": 42.022923086154236,
      "y": 506,
      "z": 417.74217703902957,
    },
    "path": "/root/resources/textFiles/file.txt",
    "visible": true,
    "width": 92.04968305707015,
    "x0": 222.98566079335163,
    "y0": 637.7477565054672,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 295.95272336524425,
      "y": 6,
      "z": 619.3247210508121,
    },
    "isLeaf": false,
    "length": 151.1869080088369,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "tables",
    "outgoingEdgePoint": Vector3 {
      "x": 421.94181337260835,
      "y": 6,
      "z": 619.3247210508121,
    },
    "path": "/root/resources/tables",
    "visible": true,
    "width": 251.9781800147282,
    "x0": 482.9581783615622,
    "y0": 793.7312670463937,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 264.335232266068,
      "y": 506,
      "z": 561.1004499893936,
    },
    "isLeaf": true,
    "length": 55.62754935897658,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table1.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 264.335232266068,
      "y": 506,
      "z": 588.914224668882,
    },
    "path": "/root/resources/tables/table1.xlsx",
    "visible": true,
    "width": 51.21312246482546,
    "x0": 488.72867103365525,
    "y0": 797.1935626496495,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 321.3188474029865,
      "y": 506,
      "z": 561.1004499893936,
    },
    "isLeaf": true,
    "length": 55.62754935897658,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table2.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 321.3188474029865,
      "y": 506,
      "z": 588.914224668882,
    },
    "path": "/root/resources/tables/table2.xlsx",
    "visible": true,
    "width": 51.21312246482546,
    "x0": 545.7122861705737,
    "y0": 797.1935626496495,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 378.302462539905,
      "y": 506,
      "z": 561.1004499893936,
    },
    "isLeaf": true,
    "length": 55.62754935897658,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table3.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 378.302462539905,
      "y": 506,
      "z": 588.914224668882,
    },
    "path": "/root/resources/tables/table3.xlsx",
    "visible": true,
    "width": 51.21312246482546,
    "x0": 602.6959013074922,
    "y0": 797.1935626496495,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 435.28607767682337,
      "y": 506,
      "z": 561.1004499893936,
    },
    "isLeaf": true,
    "length": 55.62754935897658,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table4.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 435.28607767682337,
      "y": 506,
      "z": 588.914224668882,
    },
    "path": "/root/resources/tables/table4.xlsx",
    "visible": true,
    "width": 51.21312246482546,
    "x0": 659.6795164444106,
    "y0": 797.1935626496495,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 265.77785543409124,
      "y": 506,
      "z": 619.3247210508121,
    },
    "isLeaf": true,
    "length": 26.082626877860434,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table5.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 319.8762242349632,
      "y": 506,
      "z": 619.3247210508121,
    },
    "path": "/root/resources/tables/table5.xlsx",
    "visible": true,
    "width": 108.19673760174396,
    "x0": 488.72867103365525,
    "y0": 856.2834076118819,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 265.77785543409124,
      "y": 506,
      "z": 648.8696435319283,
    },
    "isLeaf": true,
    "length": 26.08262687786032,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table6.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 319.8762242349632,
      "y": 506,
      "z": 648.8696435319283,
    },
    "path": "/root/resources/tables/table6.xlsx",
    "visible": true,
    "width": 108.19673760174396,
    "x0": 488.72867103365525,
    "y0": 885.8283300929982,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 265.77785543409124,
      "y": 506,
      "z": 678.4145660130446,
    },
    "isLeaf": true,
    "length": 26.082626877860434,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table7.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 319.8762242349632,
      "y": 506,
      "z": 678.4145660130446,
    },
    "path": "/root/resources/tables/table7.xlsx",
    "visible": true,
    "width": 108.19673760174396,
    "x0": 488.72867103365525,
    "y0": 915.3732525741143,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 378.302462539905,
      "y": 506,
      "z": 620.190294951626,
    },
    "isLeaf": true,
    "length": 55.62754935897658,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table8.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 378.302462539905,
      "y": 506,
      "z": 648.0040696311144,
    },
    "path": "/root/resources/tables/table8.xlsx",
    "visible": true,
    "width": 51.21312246482546,
    "x0": 602.6959013074922,
    "y0": 856.2834076118819,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 435.28607767682337,
      "y": 506,
      "z": 620.190294951626,
    },
    "isLeaf": true,
    "length": 55.62754935897658,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table9.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 435.28607767682337,
      "y": 506,
      "z": 648.0040696311144,
    },
    "path": "/root/resources/tables/table9.xlsx",
    "visible": true,
    "width": 51.21312246482546,
    "x0": 659.6795164444106,
    "y0": 856.2834076118819,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 379.7450857079282,
      "y": 506,
      "z": 678.4145660130446,
    },
    "isLeaf": true,
    "length": 26.082626877860434,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table10.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 433.84345450880016,
      "y": 506,
      "z": 678.4145660130446,
    },
    "path": "/root/resources/tables/table10.xlsx",
    "visible": true,
    "width": 108.19673760174385,
    "x0": 602.6959013074922,
    "y0": 915.3732525741143,
    "z0": 6,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include fixed folders on the one hand and a file at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 839.4112549695428,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 839.4112549695428,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": -40.14718625761431,
    },
    "isLeaf": false,
    "length": 503.6467529817257,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": 211.67619023324852,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 335.76450198781714,
    "x0": 83.94112549695429,
    "y0": 83.94112549695429,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -65.32952390670057,
      "y": 6,
      "z": 10.217489040558263,
    },
    "isLeaf": false,
    "length": 251.8233764908628,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 68.97627688842624,
      "y": 6,
      "z": 10.217489040558263,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 268.61160159025366,
    "x0": 117.517575695736,
    "y0": 134.30580079512686,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -8.333082076728829,
      "y": 506,
      "z": -49.73150879569938,
    },
    "isLeaf": true,
    "length": 239.7959913450306,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -8.333082076728829,
      "y": 506,
      "z": 70.1664868768159,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 235.46947363284926,
    "x0": 123.93218110684654,
    "y0": 140.31949336804297,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 199.08502140870542,
    },
    "isLeaf": false,
    "length": 50.364675298172585,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 224.26735905779168,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 33.576450198781686,
    "x0": 352.552727087208,
    "y0": 436.49385258416225,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 118.07265685105835,
      "y": 506,
      "z": 199.68579288343506,
    },
    "isLeaf": true,
    "length": 47.96158939925385,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 118.07265685105835,
      "y": 506,
      "z": 223.66658758306198,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 29.437802261754996,
    "x0": 353.35375572018086,
    "y0": 437.6953955336216,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -61.13246763185286,
      "y": 4,
      "z": 463.49956672411145,
    },
    "isLeaf": false,
    "length": 83.94112549695433,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 148.7203461105329,
      "y": 4,
      "z": 463.49956672411145,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 419.70562748477147,
    "x0": 83.94112549695429,
    "y0": 671.5290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -62.710308336682814,
      "y": 502,
      "z": 463.49956672411145,
    },
    "isLeaf": true,
    "length": 81.77722967318755,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": 133.1673448772089,
      "y": 502,
      "z": 463.49956672411145,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 391.7553064277834,
    "x0": 89.35086505637132,
    "y0": 672.6109518875177,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 839.4112549695428,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 839.4112549695428,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": -40.14718625761431,
    },
    "isLeaf": false,
    "length": 503.6467529817257,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": 211.67619023324852,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 335.76450198781714,
    "x0": 83.94112549695429,
    "y0": 83.94112549695429,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -65.32952390670057,
      "y": 6,
      "z": 10.217489040558263,
    },
    "isLeaf": false,
    "length": 251.8233764908628,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 68.97627688842624,
      "y": 6,
      "z": 10.217489040558263,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 268.61160159025366,
    "x0": 117.517575695736,
    "y0": 134.30580079512686,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -8.333082076728829,
      "y": 506,
      "z": -49.73150879569938,
    },
    "isLeaf": true,
    "length": 239.7959913450306,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -8.333082076728829,
      "y": 506,
      "z": 70.1664868768159,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 235.46947363284926,
    "x0": 123.93218110684654,
    "y0": 140.31949336804297,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 199.08502140870542,
    },
    "isLeaf": false,
    "length": 50.364675298172585,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 224.26735905779168,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 33.576450198781686,
    "x0": 352.552727087208,
    "y0": 436.49385258416225,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 118.07265685105835,
      "y": 506,
      "z": 199.68579288343506,
    },
    "isLeaf": true,
    "length": 47.96158939925385,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 118.07265685105835,
      "y": 506,
      "z": 223.66658758306198,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 29.437802261754996,
    "x0": 353.35375572018086,
    "y0": 437.6953955336216,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -61.13246763185286,
      "y": 4,
      "z": 463.49956672411145,
    },
    "isLeaf": false,
    "length": 83.94112549695433,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 148.7203461105329,
      "y": 4,
      "z": 463.49956672411145,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 419.70562748477147,
    "x0": 83.94112549695429,
    "y0": 671.5290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -62.710308336682814,
      "y": 502,
      "z": 463.49956672411145,
    },
    "isLeaf": true,
    "length": 81.77722967318755,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": 133.1673448772089,
      "y": 502,
      "z": 463.49956672411145,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 391.7553064277834,
    "x0": 89.35086505637132,
    "y0": 672.6109518875177,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "fitForFolderLabel": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 251.5,
      "y": 2,
      "z": 0.75,
    },
    "isLeaf": false,
    "length": 1003,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 251.5,
      "y": 2,
      "z": 502.25,
    },
    "path": "/root",
    "visible": true,
    "width": 1003,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 213.5,
      "y": 4,
      "z": 12.75,
    },
    "isLeaf": true,
    "length": 955,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 213.5,
      "y": 4,
      "z": 490.25,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 879,
    "x0": 24,
    "y0": 24,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -6.25,
      "y": 502,
      "z": 741,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 433.25,
      "y": 502,
      "z": 741,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 879,
    "x0": 24,
    "y0": 991,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "fitForFolderLabel": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 326.5,
      "y": 2,
      "z": 38.25,
    },
    "isLeaf": false,
    "length": 1153,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 326.5,
      "y": 2,
      "z": 614.75,
    },
    "path": "/root",
    "visible": true,
    "width": 1153,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -30.376766784452286,
      "y": 4,
      "z": 46.25,
    },
    "isLeaf": true,
    "length": 1121,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -30.376766784452286,
      "y": 4,
      "z": 606.75,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 407.2464664310954,
    "x0": 16,
    "y0": 16,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 496.1232332155477,
      "y": 4,
      "z": 46.25,
    },
    "isLeaf": false,
    "length": 1121,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 496.1232332155477,
      "y": 4,
      "z": 606.75,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 613.7535335689046,
    "x0": 439.2464664310954,
    "y0": 16,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 333.4348498233216,
      "y": 6,
      "z": -60.33161004431315,
    },
    "isLeaf": true,
    "length": 315.3367799113737,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 589.8116166077739,
      "y": 6,
      "z": -60.33161004431315,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 512.7535335689047,
    "x0": 455.2464664310954,
    "y0": 32,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#6caf3e",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 461.6232332155477,
      "y": 6,
      "z": 302.7525849335303,
    },
    "isLeaf": true,
    "length": 757.6632200886263,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 461.6232332155477,
      "y": 6,
      "z": 681.5841949778435,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 512.7535335689046,
    "x0": 455.2464664310954,
    "y0": 363.3367799113737,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 333.43484982332154,
      "y": 504,
      "z": 879,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 589.8116166077739,
      "y": 504,
      "z": 879,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 512.7535335689046,
    "x0": 455.2464664310954,
    "y0": 1129,
    "z0": 4,
  },
]
`;
